[package]
name = "swap-contract"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "swap_contract"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-log-ix-name"]

[dependencies]
anchor-lang = { version = "0.21.0", features = ["init-if-needed"] }
anchor-spl = "0.21.0"
switchboard-program = "0.1.52"
solana-program = "1.8.5"
bytemuck = "1.7.2"
num_enum = "0.5.4"
arrayref = "0.3.6"
byte-slice-cast = "1.0.0"
slab-alloc = { version = "1.0.0", path = "/Users/mfrager/Build/solana/crates/slab-alloc" }
decode-account = { version = "1.0.0", path = "/Users/mfrager/Build/solana/crates/decode-account" }
#net-authority = { version = "0.1.0", path = "/Users/mfrager/Build/solana/net-authority/programs/net-authority", features = ["cpi"] }
